# bmc

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
crates/kalshi-ws/: Cargo.toml
crates/kalshi-ws/examples/: orderbook_l2.rs  private_fills.rs  public_ticker.rs
crates/kalshi-ws/src/: auth.rs  client.rs  connection.rs  lib.rs  subscription.rs
crates/kalshi-ws/src/protocol/: channels.rs  messages.rs
crates/kalshi-ws/tests/: fake_server.rs
crates/refdata-downloader/: Cargo.toml
crates/refdata-downloader/src/: main.rs
rust/: Cargo.toml
rust/crates/kalshi-book-watch/: Cargo.toml
rust/crates/kalshi-book-watch/src/: main.rs
rust/crates/kalshi-cli/: Cargo.toml
rust/crates/kalshi-cli/src/: main.rs
rust/crates/kalshi-common/: Cargo.toml
rust/crates/kalshi-common/src/: book.rs  fees.rs  lib.rs  price.rs  prob.rs  serde_num.rs
rust/crates/kalshi-refdata-download/: Cargo.toml
rust/crates/kalshi-refdata-download/src/: main.rs
rust/crates/kalshi-rest/: Cargo.toml
rust/crates/kalshi-rest/src/: client.rs  error.rs  lib.rs  types.rs
rust/crates/kalshi-rest/tests/: paper_mode.rs  serde_orders.rs
rust/crates/kalshi-ws/: Cargo.toml
rust/crates/kalshi-ws/src/: client.rs  error.rs  subscription.rs
rust/crates/kalshi-ws/src/protocol/: commands.rs  messages.rs  mod.rs
rust/crates/kalshi-ws/tests/: fake_server.rs  serde_roundtrip.rs  signature.rs
scripts/: build-all.ps1  kalshi-cli.ps1  kalshi-download-refdata.ps1  kalshi-watch-btc.ps1  kalshi_test_order.ps1
