[workspace]
resolver = "2"
members = ["crates/*"]

# Shared metadata. Members opt in per field with `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"

# Single source of truth for dependency versions and feature sets across the
# whole repo. Members reference these with `dep = { workspace = true }`, then
# can union extra features locally:
#
#   tokio = { workspace = true, features = ["test-util"] }
[workspace.dependencies]
# Internal crates — strategies depend on these via path.
kalshi-ws = { path = "crates/kalshi-ws" }

# Async runtime + WebSocket
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.10"
signature = { version = "2.2", features = ["std"] }
rand = "0.8"
base64 = "0.22"

# Errors / observability / misc
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

# REST client + CLI (for the refdata-downloader binary)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
clap = { version = "4.5", features = ["derive", "env"] }
