[package]
name = "kalshi-refdata-download"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Downloads Kalshi reference data (series, events, markets) to NDJSON files"

[[bin]]
name = "kalshi-refdata-download"
path = "src/main.rs"

[dependencies]
kalshi-ws = { workspace = true }

tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true }
clap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
