[package]
name = "kalshi-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Async Rust client for the Kalshi prediction market WebSocket API"
repository = "https://github.com/your-org/kalshi-ws"
keywords = ["kalshi", "websocket", "prediction-market", "trading", "async"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "kalshi_ws"
path = "src/lib.rs"

[dependencies]
kalshi-common = { workspace = true, features = ["serde"] }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

rsa = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
# Extra features here are unioned with the workspace feature set.
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "public_ticker"
path = "examples/public_ticker.rs"

[[example]]
name = "private_fills"
path = "examples/private_fills.rs"

[[example]]
name = "orderbook_l2"
path = "examples/orderbook_l2.rs"
